# mini_claude

./: .env.example  .gitignore  MiniClaude.md  pyproject.toml  开发日志.md  框架.md
.claude/: settings.local.json
src/mini_claude/: __init__.py  __main__.py
src/mini_claude/commands/: __init__.py  base.py  chat.py  config.py  help.py  registry.py  tool.py
src/mini_claude/config/: __init__.py  settings.py
src/mini_claude/core/: __init__.py  command.py
src/mini_claude/models/: __init__.py
src/mini_claude/services/: __init__.py  api_client.py  auth.py  conversation.py  execution_loop.py  models.py  tool_executor.py  tool_orchestrator.py  tool_schema_generator.py
src/mini_claude/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
src/mini_claude/utils/: __init__.py
