[project]
name = "mini-claude"
version = "0.1.0"
description = "A lightweight Claude Code CLI implementation in Python"
readme = "MiniClaude.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MiniClaude Contributors"}
]
keywords = ["claude", "ai", "cli", "coding"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
mini-claude = "mini_claude.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I", "N", "UP", "S", "A", "C4", "T20", "TID", "RUF"]
lint.ignore = ["S101", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
